--- a/frontend/index.scss
+++ b/frontend/index.scss
@@ -3,11 +3,12 @@
 @mixin align-center {
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 
 @mixin align-center-horiz {
   display: flex;
-  align-items: center;
+  align-items: stretch;
   flex-direction: column;
 }
 
@@ -15,9 +16,101 @@
   border: solid 2pt $color;
 }
 
+// sources:
+//   https://www.w3schools.com/howto/howto_js_rangeslider.asp
+//   https://www.cssportal.com/style-input-range/
+@mixin input_range($background, $height, $radius, $thumb, $thumb_width, $thumb_height, $thumb_radius) {
+  $vertical_padding: ($thumb_height - $height) / 2;
+  padding-top: $vertical_padding;
+  padding-bottom: $vertical_padding;
+  input[type=range] {
+    -webkit-appearance: none;
+    background: $background;
+    height: $height;
+    border-radius: $radius;
+    pointer-events: none;
+    &::-webkit-slider-thumb {
+      -webkit-appearance: none;
+      appearance: none;
+      background: $thumb;
+      width: $thumb_width;
+      height: $thumb_height;
+      border-radius: $thumb_radius;
+      border: none;
+      pointer-events: auto;
+      cursor: pointer;
+    }
+    &::-moz-range-thumb {
+      background: $thumb;
+      width: $thumb_width;
+      height: $thumb_height;
+      border-radius: $thumb_radius;
+      border: none;
+      pointer-events: auto;
+      cursor: pointer;
+    }
+  }
+}
+
+@mixin media_only($prop, $value, $type_width) {
+  @media only screen and (min-width: $type_width) {
+    #{$prop}: $value;
+  }
+}
+
 /* --------------------------------- */
 $tablet_width: 600px;
 $desktop_width: 768px;
+
+// sources:
+//    https://www.w3schools.com/Css/css_rwd_mediaqueries.asp
+* {
+  box-sizing: border-box;
+}
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+ /* For mobile phones: */
+[class*="col-"] {
+  float: left;
+  width: 100%;
+}
+
+@media only screen and (min-width: $tablet_width) {
+  /* For tablets: */
+  .col-s-1 {width: 8.33%;}
+  .col-s-2 {width: 16.66%;}
+  .col-s-3 {width: 25%;}
+  .col-s-4 {width: 33.33%;}
+  .col-s-5 {width: 41.66%;}
+  .col-s-6 {width: 50%;}
+  .col-s-7 {width: 58.33%;}
+  .col-s-8 {width: 66.66%;}
+  .col-s-9 {width: 75%;}
+  .col-s-10 {width: 83.33%;}
+  .col-s-11 {width: 91.66%;}
+  .col-s-12 {width: 100%;}
+}
+
+@media only screen and (min-width: $desktop_width) {
+  /* For desktop: */
+  .col-1 {width: 8.33%;}
+  .col-2 {width: 16.66%;}
+  .col-3 {width: 25%;}
+  .col-4 {width: 33.33%;}
+  .col-5 {width: 41.66%;}
+  .col-6 {width: 50%;}
+  .col-7 {width: 58.33%;}
+  .col-8 {width: 66.66%;}
+  .col-9 {width: 75%;}
+  .col-10 {width: 83.33%;}
+  .col-11 {width: 91.66%;}
+  .col-12 {width: 100%;}
+}
+
 /* --------------------------------- */
 
 header, footer {
@@ -25,16 +118,16 @@ header, footer {
   font-size: 1em;
   border: dashed 1pt gray;
   margin: 2px;
-  @media only screen and (min-width: $desktop_width) {
-    margin: 20px;
-  }
+  @include media_only(margin, 20px, $desktop_width);
 }
 footer {
+  margin-top: 20px;
   color: #222;
 }
 
-img {
-  max-width: 100%;
+body {
+  margin: 0px;
+  font-family: sans-serif;
 }
 
 .monospace {
@@ -50,31 +143,77 @@ svg {
 /* --------------------------------- */
 
 .playback {
+  &.container {
+    @include align-center-horiz;
+    /* align-items: stretch; */
+    text-align: center;
+    padding: 10px;
+  }
   &.control {
     @include align-center;
     button {
       @include align-center-horiz;
       flex-basis: 100%; // equally-size all buttons
       height: 60px;
-      @media only screen and (min-width: $desktop_width) {
-        height: 50px;
-      }
+      @include media_only(height, 50px, $desktop_width);
     }
   }
   &.time {
     @include align-center
-    input {
+    @include input_range(#ccc, 10px, 3px, #11b1ff, 15px, 35px, 12px);
+    input[type=range] {
       flex-grow: 1;
     }
   }
   &.meta {
     @include align-center-horiz;
     @include border-box;
+    padding: 5px;
+    //TODO: robust-ify these empirical "min-height" measurements
+    //  difficult to match height of any other components, since all are "float: left"
+    min-height: 150px;
+    @include media_only(min-height, 200px, $tablet_width);
+    @include media_only(min-height, 300px, $desktop_width);
+    div {
+      flex-grow: 1;
+      @include align-center;
+    }
+    @include media_only(font-size, 1.2em, $desktop_width);
+    .title {
+      font-weight: bold;
+      font-size: 1.2em;
+      @include media_only(font-size, 1.5em, $desktop_width);
+    }
+    .artist {
+      font-weight: bolder;
+    }
   }
   &.art {
     @include align-center-horiz;
     img {
       @include border-box;
     }
+  }
+}
+
+.disconnected {
+  @include align-center-horiz;
+  text-align: center;
+  @include media_only(text-align, inherit, $tablet_width);
+  .title {
+    font-weight: bold;
+    font-size: 1.2em;
+    margin-bottom: 20px;
+  }
+  svg {
+    max-height: 200px;
+    @include media_only(max-height, 100px, $tablet_width);
+  }
+  div {
+    @include align-center-horiz;
+  }
+  button {
+    padding: 20px;
+    @include media_only(padding, 10px, $desktop_width);
   }
 }
