add various TODOs for flake frontend mtime, frontend darkmode, and removing unused iter code

--- a/frontend/index.scss
+++ b/frontend/index.scss
@@ -58,6 +58,20 @@
   }
 }
 
+// TODO - TEST THIS OUT!
+// @media (prefers-color-scheme: dark) {
+//   html {
+//     background-color: #1e1e1e;
+//     color: #ffffffd4;
+//   }
+//   button {
+//     background-color: #ffffffb0;
+//   }
+//   button:hover {
+//     background-color: #ffffffe0;
+//   }
+// }
+
 /* --------------------------------- */
 $tablet_width: 600px;
 $desktop_width: 768px;
